--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Parcelamento</title>
+<title>Simulação</title>
 
 <link rel="manifest" href="manifest.json">
 <meta name="theme-color" content="#0b1120">
@@ -19,7 +19,7 @@ body {
 .container {
   max-width: 420px;
   margin: auto;
-  padding: 24px;
+  padding: 24px 16px;
 }
 
 h1 {
@@ -35,7 +35,7 @@ h1 {
 
 input {
   width: 100%;
-  padding: 16px;
+  padding: 14px 18px;
   font-size: 22px;
   border-radius: 12px;
   border: none;
