--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ input {
   border: none;
   background: #1e293b;
   color: white;
-  text-align: right;
+  text-align: center;
   outline: none;
   box-shadow: inset 0 0 0 1px #334155;
 }
