--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@ h1 {
 
 input {
   width: 100%;
-  padding: 18px;
+  padding: 10px;
   font-size: 22px;
   border-radius: 12px;
+  margin-bottom: 20px;
   border: none;
   background: #1e293b;
   color: white;
