--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <meta name="theme-color" content="#0b1120">
 
 <style>
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -19,7 +24,7 @@ body {
 .container {
   max-width: 420px;
   margin: auto;
-  padding: 18px;
+  padding: 24px 16px;
 }
 
 h1 {
@@ -35,27 +40,28 @@ h1 {
 
 input {
   width: 100%;
-  padding: 18px;
+  padding: 14px 18px;
   font-size: 22px;
   border-radius: 12px;
   border: none;
   background: #1e293b;
   color: white;
   text-align: center;
-  
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
 
 .toggle-btn {
   width: 100%;
-  padding: 10px;
+  padding: 10px 18px;
   margin-bottom: 20px;
-  border-radius: 10px;
+  border-radius: 12px;
   border: none;
   font-size: 14px;
   background: #334155;
   color: #cbd5e1;
   cursor: pointer;
   transition: 0.2s ease;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
 
 .toggle-btn.ativo {
@@ -97,6 +103,7 @@ input {
   font-size: 12px;
   opacity: 0.75;
 }
+
 </style>
 </head>
 
@@ -225,4 +232,4 @@ if ("serviceWorker" in navigator) {
 </script>
 
 </body>
-</html>
+  </html>
