--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ input {
 }
 
 .card.destacada {
-  border: 1px solid #22c55e;
-  box-shadow: 0 0 10px rgba(34,197,94,0.3);
+  border: 1px solid #3990C9;
+  box-shadow: 0 0 10px #225678;
 }
 
 .card.opaca {
