--- a/index.html
+++ b/index.html
@@ -188,7 +188,16 @@ input {
 
       <h1>Simulação</h1>
 
-      <input type="text" id="valor" placeholder="R$ 0,00" inputmode="numeric"/>
+      <input 
+  type="text"
+  id="valor"
+  placeholder="R$ 0,00"
+  inputmode="numeric"
+  autocomplete="off"
+  autocorrect="off"
+  autocapitalize="off"
+  spellcheck="false"
+  name="valor-simulacao">
 
       <div class="button-group">
         <button id="modoBtn" class="toggle-btn">Card</button>
