--- a/index.html
+++ b/index.html
@@ -262,14 +262,40 @@ document.getElementById("limparCarrinho").onclick=()=>{
 };
 
 function renderProdutos(){
-  const area=document.getElementById("produtosArea");
-  area.innerHTML="";
-  produtos.forEach(p=>{
-    if(!carrinho[p.nome]) carrinho[p.nome]=0;
-    area.innerHTML+=`
+  const area = document.getElementById("produtosArea");
+  area.innerHTML = "";
+
+  let categoriaAtual = "";
+
+  produtos.forEach(p => {
+
+    if (p.categoria !== categoriaAtual) {
+      categoriaAtual = p.categoria;
+
+      area.innerHTML += `
+        <div style="
+          margin:18px 0 8px 0;
+          font-size:13px;
+          font-weight:600;
+          opacity:0.6;
+          border-bottom:1px solid rgba(255,255,255,0.08);
+          padding-bottom:4px;
+        ">
+          ${categoriaAtual}
+        </div>
+      `;
+    }
+
+    if(!carrinho[p.nome]) carrinho[p.nome] = 0;
+
+    area.innerHTML += `
       <div class="produto-item">
-        <div class="produto-header">${p.nome} - ${formatarMoeda(p.valor)}</div>
-        <div class="produto-desc">${p.descricao||""}</div>
+        <div class="produto-header">
+          ${p.nome} - ${formatarMoeda(p.valor)}
+        </div>
+        <div class="produto-desc">
+          ${p.descricao || ""}
+        </div>
         <div class="produto-footer">
           <div class="qtd-controls">
             <button class="qtd-btn" onclick="alterarQtd('${p.nome}',-1)">-</button>
@@ -277,7 +303,8 @@ function renderProdutos(){
             <button class="qtd-btn" onclick="alterarQtd('${p.nome}',1)">+</button>
           </div>
         </div>
-      </div>`;
+      </div>
+    `;
   });
 }
 
