--- a/index.html
+++ b/index.html
@@ -294,83 +294,77 @@ document.getElementById("limparCarrinho").onclick=()=>{
 // Objeto para controlar quais categorias estão abertas
 let categoriasAtivas = {};
 
+function toggleCategoria(cat) {
+  categoriasAtivas[cat] = !categoriasAtivas[cat];
+  const div = document.getElementById("cat-" + cat);
+  if (div) {
+    div.style.display = categoriasAtivas[cat] ? "block" : "none";
+  }
+
+  // Atualiza o ícone do título
+  const headers = document.querySelectorAll(".categoria-btn");
+  headers.forEach(h => {
+    if (h.dataset.cat === cat) {
+      h.textContent = `${cat} ${categoriasAtivas[cat] ? '▼' : '►'}`;
+    }
+  });
+}
+
 function renderProdutos() {
   const area = document.getElementById("produtosArea");
   area.innerHTML = "";
 
-  let categoriaAtual = "";
-
-  // Ordenar produtos por categoria
-  const produtosOrdenados = produtos.slice().sort((a, b) => {
-    if (a.categoria < b.categoria) return -1;
-    if (a.categoria > b.categoria) return 1;
-    return 0;
+  // Agrupa produtos por categoria
+  const produtosPorCategoria = {};
+  produtos.forEach(p => {
+    if (!produtosPorCategoria[p.categoria]) produtosPorCategoria[p.categoria] = [];
+    produtosPorCategoria[p.categoria].push(p);
+    if (carrinho[p.nome] === undefined) carrinho[p.nome] = 0;
   });
 
-  produtosOrdenados.forEach(p => {
-    // Quando a categoria muda, criar o botão de categoria
-    if (p.categoria !== categoriaAtual) {
-      categoriaAtual = p.categoria;
+  // Renderiza cada categoria
+  Object.keys(produtosPorCategoria).sort().forEach(cat => {
+    // Inicializa estado da categoria caso ainda não exista
+    if (categoriasAtivas[cat] === undefined) categoriasAtivas[cat] = true;
 
-      // Inicializa como expandida se ainda não existir
-      if (categoriasAtivas[categoriaAtual] === undefined) {
-        categoriasAtivas[categoriaAtual] = true;
-      }
-
-      // Botão de categoria
-      area.innerHTML += `
-        <h3 class="categoria-btn" style="
+    // Botão de categoria
+    area.innerHTML += `
+      <h3 
+        class="categoria-btn" 
+        data-cat="${cat}" 
+        style="
           margin: 12px 0 6px 0; 
           padding: 6px 10px; 
           background: rgba(34, 197, 94, 0.2); 
           border-radius: 10px; 
           color: #16a34a;
           font-weight: 600;
-          cursor: pointer;
-        " onclick="toggleCategoria('${categoriaAtual}')">
-          ${categoriaAtual} ${categoriasAtivas[categoriaAtual] ? '▼' : '►'}
-        </h3>
-        <div class="categoria-produtos" id="cat-${categoriaAtual}" style="display: ${categoriasAtivas[categoriaAtual] ? 'block' : 'none'}">
-      `;
-    }
+          cursor: pointer;"
+        onclick="toggleCategoria('${cat}')">
+        ${cat} ${categoriasAtivas[cat] ? '▼' : '►'}
+      </h3>`;
 
-    if (!carrinho[p.nome]) carrinho[p.nome] = 0;
+    // Container da categoria (expansível)
+    area.innerHTML += `<div id="cat-${cat}" style="display:${categoriasAtivas[cat] ? 'block' : 'none'};">`;
 
-    // Produto dentro da categoria
-    area.innerHTML += `
-      <div class="produto-item">
-        <div class="produto-header">${p.nome} - ${formatarMoeda(p.valor)}</div>
-        <div class="produto-desc">${p.descricao || ""}</div>
-        <div class="produto-footer">
-          <div class="qtd-controls">
-            <button class="qtd-btn" onclick="alterarQtd('${p.nome}',-1)">-</button>
-            <div class="qtd-num">${carrinho[p.nome]}</div>
-            <button class="qtd-btn" onclick="alterarQtd('${p.nome}',1)">+</button>
+    produtosPorCategoria[cat].forEach(p => {
+      area.innerHTML += `
+        <div class="produto-item">
+          <div class="produto-header">${p.nome} - ${formatarMoeda(p.valor)}</div>
+          <div class="produto-desc">${p.descricao || ""}</div>
+          <div class="produto-footer">
+            <div class="qtd-controls">
+              <button class="qtd-btn" onclick="alterarQtd('${p.nome}',-1)">-</button>
+              <div class="qtd-num">${carrinho[p.nome]}</div>
+              <button class="qtd-btn" onclick="alterarQtd('${p.nome}',1)">+</button>
+            </div>
           </div>
-        </div>
-      </div>`;
-  });
+        </div>`;
+    });
 
-  // Fecha todas as divs de categoria abertas
-  const divsCategoria = document.querySelectorAll(".categoria-produtos");
-  divsCategoria.forEach(div => {
-    // Garante que o display está de acordo com o estado
-    const cat = div.id.replace("cat-", "");
-    div.style.display = categoriasAtivas[cat] ? "block" : "none";
+    area.innerHTML += `</div>`; // fecha container da categoria
   });
 }
-
-// Função para alternar categoria
-function toggleCategoria(cat) {
-  categoriasAtivas[cat] = !categoriasAtivas[cat];
-  renderProdutos(); // re-renderiza mantendo o estado das categorias
-}
-window.alterarQtd=function(nome,delta){
-  carrinho[nome]+=delta;
-  if(carrinho[nome]<0)carrinho[nome]=0;
-  atualizarTotal();
-  renderProdutos();
-};
 
 function atualizarTotal(){
   let total=0;
